dataset1235/2025-2/805158916/users/1147723658/executions/1584167357_1026882843.log
== SUBMISSION (2025-08-27 14:48:15)
-- CODE: 
import math 
raio = float(input("Digite o raio:"))
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
Digite o raio:0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
Digite o raio:32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
Digite o raio:38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
Digite o raio:452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
Digite o raio:221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
Digite o raio:346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:47:59)
-- CODE: 
[import math 
raio = float(input("Digite o raio:"))
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:47:25)
-- CODE: 
[impor match 
  raio = float(input("Digite o raio:"))
area = match.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:47:27)
-- CODE: 
[impor match 
  raio = float(input("Digite o raio:"))
area = match.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    [impor match 
    ^
SyntaxError: '[' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:48:15)
-- CODE: 
import math 
raio = float(input("Digite o raio:"))
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
Digite o raio:0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
Digite o raio:32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
Digite o raio:38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
Digite o raio:452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
Digite o raio:221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
Digite o raio:346.3606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:47:59)
-- CODE: 
[import math 
raio = float(input("Digite o raio:"))
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    [import math 
     ^^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
